Fixes strange shifting problem due to scroll bar

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ body{
   justify-content: flex-start;
   align-items: center;
   height:100vh;
+  padding-left: calc(100vw - 100%);
 
 }
 
